--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <!-- https://vuejs.org/v2/guide/index.html -->
         <div id="app">
             <div class="jumbotron">
-                <h1 class="display-4" id="title">{{ collection.title }}</h1>
+                <h1 class="display-4" id="title">{{col.collection.title}}</h1>
             </div>
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="..." alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">{{ card.title }}</h5>
+                  <h5 class="card-title">{{item.prompt}}</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Ver</a>
                 </div>
