--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
             <div class="jumbotron">
                 <h1 class="display-4" id="title">{{col.collection.title}}</h1>
             </div>
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
-                <div class="card-body">
+            <div v-for="movie in col.collection.items" class="card" style="width: 18rem;">
+                <div v-for="item in movie.data" class="card-body">
                   <h5 class="card-title">{{item.prompt}}</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Ver</a>
